ingress/shlink/ingress-custom-letsencrypt/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shlink
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
  - secretName: AUTOMATIC_REPLACE-letsencrypt-production
    hosts:
    - AUTOMATIC_REPLACE
  rules:
  - host: AUTOMATIC_REPLACE
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shlink
            port:
              name: http
